--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ecommercesite",
- 
-
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
+ 
+    "dependencies": {
+    "@stripe/react-stripe-js": "^2.7.0",
+    "@stripe/stripe-js": "^3.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
